# graphkg-rag-demo

./: .gitignore  BACKEND_DOCUMENTATION.md  ReadMe.md  pyproject.toml
src/backend/: chunks_data.json  kg_db.py  main.py  utils.py
src/backend/text-files/: himalayas_climbing.md
src/frontend/: package-lock.json  package.json
src/frontend/public/: index.html
src/frontend/src/: App.css  App.jsx
