[tool.poetry]
name = "pdf_kg_langchain"
version = "1.0.0"
description = "PDF QA pipeline with LangChain, Vector DB, Knowledge Graph"
authors = ["anjiboddupally <boddupally.anji@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100"
uvicorn = "^0.23"
requests = "^2.31"
chromadb = "^0.4"
neo4j = "^5.10"
python-multipart = "^0.0.6"
langchain = "^0.1.0"  # Replace with latest
sentence-transformers = "^2.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
